--- a/css/index.css
+++ b/css/index.css
@@ -45,7 +45,7 @@ i {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 2rem 1.5rem;
+  padding-bottom: 3rem;
 }
 
 .main-header__right {
@@ -69,7 +69,7 @@ i {
   align-content: center;
   justify-content: center;
   position: relative;
-  color: #7f8187;
+  color: var(--white-color);
 }
 
 .main-header__link:hover {
@@ -89,7 +89,7 @@ i {
   top: 5.5rem;
   left: 0;
   right: 0;
-  background-color: var(--white-color);
+  background-color: var(--dark-color);
   transition: all 200ms ease-in-out;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.12);
   border-radius: 0.5rem;
@@ -111,7 +111,7 @@ i {
   display: block;
   padding: 0.6rem 2rem;
   font-size: 1.4rem;
-  color: var(--dark-color);
+  color: var(--white-color);
   transition: all 400ms ease;
 }
 
@@ -190,13 +190,14 @@ i {
   background-size: cover;
   background-attachment: fixed;
   text-align: center;
-  padding: 9rem 0;
+  padding: 5rem 0;
   color: var(--white-color);
 }
 
 .landing__title {
   font-size: 3.4rem;
-  font-weight: bold;
+  font-weight: 900;
+  margin-bottom: 1rem;
 }
 
 .landing__subtitle {
@@ -262,3 +263,47 @@ i {
 }
 
 /* Finish landing Styles */
+
+
+/* Start Lateset Courses Styles */
+
+.courses {
+  margin: 4rem 0;
+}
+
+.courses-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.courses-header__right {
+  display: flex;
+  flex-direction: column;
+}
+
+.courses-header__text {
+  color: #9c9c9c;
+  font-size: 1.5rem;
+}
+
+.courses-header__link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--white-color);
+  background-color: var(--primary-color);
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+}
+
+.courses-header__link:hover {
+  color: var(--white-color);
+}
+
+.courses-header__icon {
+  margin-right: 0.5rem;
+  font-size: 1.5rem;
+}
+
+/* Finish Latest Courses Styles */
