finish make css module

--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,8 @@
 @import './top-bar.css';
 @import "./navbar.css";
 @import "./default.css";
-
+@import "./footer.css";
+@import "./course-box.css";
 
 
 /* Start landing Styles */
@@ -127,102 +128,6 @@
 .courses-header__icon {
   margin-right: 0.5rem;
   font-size: 1.5rem;
-}
-
-.course-box {
-  background-color: var(--white-color);
-  box-shadow: 0 0 19px rgba(168, 172, 185, 0.3);
-  border-radius: 1rem;
-  margin: 2rem 0;
-  transition: all 400ms ease;
-}
-
-.course-box:hover {
-  transform: translateY(-0.6rem);
-}
-
-.course-box__img {
-  width: 100%;
-  border-radius: 1rem 1rem  0 0;
-}
-
-.course-box__main {
-  padding: 0 1.2rem;
-}
-
-.course-box__title {
-  display: block;
-  padding: 1rem 0;
-}
-
-.course-box__rating-teacher {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.course-box__teacher {
-  display: flex;
-  align-items: center;
-}
-
-.course-box__teacher-icon {
-  color: #6c757d;
-  font-size: 1.8rem;
-}
-
-.course-box__teacher-link {
-  color: #6c757d;
-  font-size: 1.2rem;
-  margin-right: 0.4rem;
-}
-
-.course-box__star {
-  margin: -0.2rem;
-}
-
-.course-box__status {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 1rem 0;
-}
-
-.course-box__users-icon {
-  color: #6c757d;
-  font-size: 1.6rem;
-}
-
-.course-box__users-text {
-  color: #6c757d;
-  font-size: 1.4rem;
-}
-
-.course-box__price {
-  color: #9c9c9c;
-  font-size: 1.8rem;
-}
-
-.course-box__footer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 1.3rem 0;
-  border-top: 1px solid #e8e8e8;
-}
-
-.course-box__footer-link {
-  display: flex;
-  align-content: center;
-  justify-content: center;
-  color: var(--primary-color);
-  font-size: 1.5rem;
-  font-weight: bold;
-}
-
-.course-box__footer-icon {
-  margin-right: 0.5rem;
-  font-size: 1.9rem;
 }
 
 /* Finish Latest Courses Styles */
@@ -423,87 +328,3 @@
 }
 
 /* Finish Articles Styles */
-
-
-/* Start Footer Styles */
-
-.footer-widgets {
-  background-color: #17132b;
-  border-radius: 1rem;
-  padding: 4rem 3.5rem;
-  position: relative;
-  margin-bottom: 5rem;
-}
-
-.footer-widgets::before {
-  content: "";
-  position: absolute;
-  right: 0;
-  left: 0;
-  margin: 0 auto;
-  height: 4rem;
-  width: 50rem;
-  background-color: rgba(15, 218, 245, 0.815);
-  z-index: -1;
-  bottom: -1.5rem;
-  border-radius: 5rem;
-}
-
-.footer-widgets__title {
-  display: block;
-  font-size: 1.7rem;
-  font-weight: bold;
-  margin-bottom: 2rem;
-  position: relative;
-  color: #ffffff;
-}
-
-.footer-widgets__title::before {
-  content: "";
-  position: absolute;
-  width: 3.5rem;
-  height: 3.5rem;
-  background-color: rgba(15, 218, 245, 0.952);
-  border-radius: 0.7rem;
-  right: 1rem;
-  opacity: 0.3;
-  transform: rotate(45deg);
-}
-
-
-.footer-widgets__text {
-  color: #ffffff98;
-  padding-left: 3%;
-  margin-left: 2%;
-  border-left: rgba(255, 255, 255, 0.1) 1px solid;
-}
-
-.footer-widgets__links {
-  display: flex;
-  flex-direction: column;
-  /* color: #ffffff; */
-  padding-left: 3%;
-  margin-left: 2%;
-  border-left: rgba(255, 255, 255, 0.1) 1px solid;
-}
-
-.footer-widgets__link {
-  display: block;
-  margin-bottom: 1rem;
-  color: #ffffff9c;
-}
-
-.footer__copyright {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  /* background-color: #f0f2f7; */
-  padding: 3rem 0;
-}
-
-.footer__copyright-text {
-  color: #ffffffe0;
-  font-weight: bold;
-}
-
-/* Finish Footer Styles */
