--- a/frontend/css/login.css
+++ b/frontend/css/login.css
@@ -170,3 +170,14 @@
     z-index: -99;
     transform: rotate(-4deg);
 }
+
+
+
+/* Library Custom Styles */
+
+.swal-button-container {
+    display: flex;
+    justify-content: center ;
+}
+
+/* Library Custom Styles */
