--- a/frontend/css/contact-us.css
+++ b/frontend/css/contact-us.css
@@ -22,7 +22,7 @@
   top: -5rem;
   width: 150%;
   height: 380px;
-  background-color: #2bce56;
+  background-color: rgba(42, 142, 255, 0.774);
   z-index: -1;
   transform: rotate(-4deg);
 }
@@ -31,7 +31,7 @@
   position: absolute;
   width: 150%;
   height: 380px;
-  background-color: rgb(43, 206, 86, 0.6);
+  background-color: rgba(43, 73, 206, 0.986);
   z-index: -9999;
   transform: rotate(-4deg);
 }
@@ -45,7 +45,7 @@
   box-shadow: 0 6px 20px rgba(168, 172, 185, 0.3);
   border-radius: 5px;
   width: 50rem;
-  border-bottom: 5px solid #2bce56;
+  border-bottom: 5px solid var(--primary-color);
 }
 .login__title {
   display: block;
@@ -101,7 +101,7 @@
   margin-top: 0.8rem;
   display: flex;
   align-items: center;
-  background-color: #2bce56;
+  background-color: var(--primary-color);
 }
 
 .login-form__btn-text {
