--- a/frontend/css/course.css
+++ b/frontend/css/course.css
@@ -7,6 +7,8 @@
 @import "./course-box.css";
 @import "./helpers.css";
 @import "./breadcrumb.css";
+@import "./sidebarCoursesBox.css";
+@import "./comments.css";
 
 /* Start Course Info Styles */
 
