--- a/frontend/css/search.css
+++ b/frontend/css/search.css
@@ -56,6 +56,7 @@
 
 .articles {
   margin: 4rem 0;
+ margin-top: 250px;
 }
 
 .articles-header {
@@ -98,6 +99,7 @@
   transition: all 400ms ease;
   border-radius: 1rem;
   box-shadow: 0 5px 30px rgba(70, 72, 77, 0.08);
+  background-color: rgb(228, 228, 228);
 }
 
 .article-card:hover {
@@ -117,7 +119,7 @@
 }
 
 .article-card__text {
-  color: #898989;
+  color: #646464e0;
   font-size: 1.2rem;
   padding: 1rem 0 2.5rem 0;
 }
